<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/book_details_lib_title1"
        style="@style/my_headLine1"
        android:text="@string/member_area" />

    <TextView
        android:id="@+id/book_details_lib_title2"
        style="@style/my_headLine2"
        android:text="@string/to_be_replaced" />

    <TextView
        android:id="@+id/book_details_lib_title3"
        style="@style/my_headLine3"
        android:text="@string/book_details" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#fff"
            android:orientation="vertical">

            <TextView
                style="@style/item_header_with_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/book" />

            <TextView
                android:id="@+id/tw__lib_book_detail_title"
                style="@style/book_item_el1"
                android:text="@string/to_be_replaced" />

            <TextView
                android:id="@+id/tw_book_lib_detail_author"
                style="@style/book_item_el2"
                android:text="@string/to_be_replaced" />

            <TextView
                android:id="@+id/tw_Lib_book_detail_isbn"
                style="@style/book_item_el3"
                android:text="@string/to_be_replaced" />

            <TextView
                android:id="@+id/tw_lib_book_detail_copies"
                style="@style/book_item_el3"
                android:text="@string/to_be_replaced" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:layout_margin="8dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linear_layout_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:elevation="8dp"
            android:orientation="vertical"
            android:padding="8sp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"

                    android:layout_weight="2"
                    android:text="@string/number_of_copies_to_add" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="horizontal">

                    <com.shawnlin.numberpicker.NumberPicker

                        android:id="@+id/number_picker"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:np_dividerColor="@color/primaryColor"
                        app:np_formatter=""
                        app:np_height="64dp"
                        app:np_max="10"
                        app:np_min="1"
                        app:np_orientation="horizontal"
                        app:np_selectedTextColor="@color/primaryColor"
                        app:np_selectedTextSize="20sp"
                        app:np_textColor="@color/primaryColor"
                        app:np_textSize="20sp"

                        app:np_value="1" />

                </LinearLayout>


            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="16sp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="2"
                    android:text="@string/reference_only" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <Switch
                            android:id="@+id/switch_is_reference"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"


                            />
                    </androidx.appcompat.widget.LinearLayoutCompat>


                </LinearLayout>


            </androidx.appcompat.widget.LinearLayoutCompat>

            <Button
                android:id="@+id/btn_add_copies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/add_copy_ies" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/copies_item_rec_view_librarian"

        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:padding="4dp"
        android:paddingBottom="180dp"
        android:scrollbars="vertical"
        tools:listitem="@layout/copy_item_librarian" />


</LinearLayout>